--- a/index.html
+++ b/index.html
@@ -65,7 +65,71 @@
     </form>
         </div>
         <div>
-<img src="./img/IMAGE.svg" alt="hand">
+<img src="./img/hand.svg" alt="hand">
+        </div>
+    </div>
+</section>
+<section class="container flex grow">
+    <h2 class="grow_tittle">
+        Grow 2.5x faster than your competitors.
+    </h2>
+    <div class="grow_flex">
+        <div class="grow_element">
+            <img src="./img/grow.png" alt="grow">
+            <div class="grow_item">
+                <h3 class="grow_pretittle">
+                    RIVER ISLAND
+                </h3>
+                <p class="grow_text">
+                    River Island transforms the customer experience with personalization.
+                </p>
+            </div>
+        </div>
+        <div>
+            <div class="grow_element">
+                <img src="./img/water.png" alt="water">
+                <div class="grow_item">
+                    <h3 class="grow_pretittle">
+                        RIVER ISLAND
+                    </h3>
+                    <p class="grow_text">
+                        River Island transforms the customer experience with personalization.
+                    </p>
+                </div>
+            </div>
+    </div>
+</section>
+<section class="container commerce">
+    <h2 class="commerce_tittle">
+        Qubit CommerceAI.
+    </h2>
+    <div class="flex">
+        <div>
+            <img src="./img/icon.svg" alt="loop">
+            <h5 class="commerce_pretittle">
+                More insight
+            </h5>
+            <p class="commerce_text">
+                Learn which products drive performance and which don't, through automated insights you can action.
+            </p>
+        </div>
+        <div>
+            <img src="./img/Frame.svg" alt="icon">
+            <h5 class="commerce_pretittle">
+                More personal
+            </h5 class="commerce_pretittle">
+            <p class="commerce_text">
+                Qubit CommerceAI generates a model per shopper to make every customer interaction more relevant.
+            </p>
+        </div>
+        <div>
+            <img src="./img/icon2.svg" alt="frame">
+            <h5 class="commerce_pretittle">
+                More effective
+            </h5>
+            <p class="commerce_text">
+                Qubit fuses data, intent, and design tools to enable your team to create more effective customer experiences.
+            </p>
         </div>
     </div>
 </section>
